[workspace]
members  = [ "client", "exporter" ]
resolver = "2"

[profile.release]
codegen-units = 1
lto           = "fat"
strip         = true

[workspace.dependencies]
dirs                        = "5.0.1"
env_logger                  = "0.11.3"
http                        = "1.1.0"
http-body-util              = "0.1"
hyper                       = "1.3.1"
hyper-rustls                = "0.27.1"
hyper-util                  = "0.1.3"
log                         = "0.4.21"
metrics                     = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
metrics-util                = "0.16.3"
serde                       = "1.0.200"
serde_with                  = "3.8.0"
serde_yaml                  = "0.9.33"
thiserror                   = "1.0.59"
tokio                       = "1.37.0"
url                         = "2.5.0"
wait-timeout                = "0.2.0"
