[package]
name = "openweathermap_client"
description = "A client for querying the weather from the free OpenWeatherMap API."
version = "0.2.0"
edition = "2021"
authors = ["evaneaston"]
homepage = "https://github.com/evaneaston/openweathermap"
repository = "https://github.com/evaneaston/openweathermap"
readme = "../README.md"
license = "MIT-0"
keywords = ["openweathermap", "prometheus", "metrics", "exporter"]
categories = ["api-bindings"]

[lib]
name = "openweathermap_client"
path = "src/lib.rs"

[dependencies]
hyper = { version = "0.14.26", features = [
    "client",
    "runtime",
    "http1",
    "http2",
] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
http = "0.2.9"
log = "0.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.37"
url = "2.3.1"

[dev-dependencies]
# used for example docs
tokio = { version = "1.21.1", features = ["macros", "net"] }
