[package]
name         = "openweathermap_client"
description  = "A client for querying the weather from the free OpenWeatherMap API."
version      = "0.5.0"
rust-version = "1.82"
edition      = "2021"
authors      = [ "evaneaston" ]
homepage     = "https://github.com/evaneaston/openweathermap"
repository   = "https://github.com/evaneaston/openweathermap"
readme       = "README.md"
license      = "MIT-0"
keywords     = [ "openweathermap", "prometheus", "metrics", "exporter" ]
categories   = [ "api-bindings" ]

[lib]
name = "openweathermap_client"
path = "src/lib.rs"

[dependencies]
http           = { workspace = true }
hyper          = { workspace = true, features = [ "client", "http1" ] }
hyper-rustls   = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
log            = { workspace = true }
serde          = { workspace = true, features = [ "derive" ] }
serde_yaml     = { workspace = true }
thiserror      = { workspace = true }
url            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }
