[package]
name         = "openweathermap_exporter"
description  = "An aggregator that polls OpenWeatherMap free API data and exposes it in prometheus exposition format."
version      = "0.6.12"
rust-version = "1.82"
edition      = "2021"
authors      = [ "evaneaston" ]
homepage     = "https://github.com/evaneaston/openweathermap"
repository   = "https://github.com/evaneaston/openweathermap"
readme       = "README.md"
license      = "MIT-0"
keywords     = [ "openweathermap", "prometheus", "metrics", "exporter" ]
categories   = [ "command-line-utilities" ]

[[bin]]
name = "openweathermap_exporter"
path = "src/main.rs"

[dependencies]
dirs                        = { workspace = true }
env_logger                  = { workspace = true }
log                         = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true, features = [ "http-listener" ] }
metrics-util                = { workspace = true }
openweathermap_client       = { version = "0.6.0", path = "../client" }
serde                       = { workspace = true, features = [ "derive" ] }
serde_with                  = { workspace = true, features = [ "std" ] }
serde_yaml                  = { workspace = true }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = [ "macros", "net" ] }

[dev-dependencies]
http-body-util = { workspace = true }
hyper          = { workspace = true, features = [ "client" ] }
hyper-util     = { workspace = true, features = [ "client", "http1", "client-legacy" ] }
wait-timeout   = { workspace = true }
